// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuItem renders snapshot correctly 1`] = `
<TouchableOpacity
  disabled={false}
  onPress={[MockFunction]}
  style={
    {
      "backgroundColor": "#ffffff",
      "borderRadius": 4,
      "opacity": 1,
      "position": "relative",
    }
  }
>
  <View
    accessibilityRole="none"
    accessible={true}
    style={
      {
        "padding": 16,
        "paddingVertical": 8,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "flex": -1,
          }
        }
        testID="listitemcolumn"
      >
        <SvgMock
          fill="currentColor"
          name="Add"
          style={
            [
              {
                "color": "#131416",
                "height": 20,
                "width": 20,
              },
              undefined,
            ]
          }
        />
      </View>
      <View
        accessible={false}
        style={
          {
            "width": 16,
          }
        }
        testID="listitem-gap"
      />
      <View
        style={
          {
            "flex": 1,
          }
        }
        testID="listitemcolumn"
      >
        <Text
          accessibilityRole="text"
          style={
            [
              {
                "color": "#131416",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "fontWeight": 400,
                "letterSpacing": 0,
                "lineHeight": 24,
              },
              undefined,
            ]
          }
        >
          Test Menu Item
        </Text>
        <Text
          accessibilityRole="text"
          style={
            [
              {
                "color": "#66676a",
                "fontFamily": "Geist-Regular",
                "fontSize": 14,
                "fontWeight": 400,
                "letterSpacing": 0,
                "lineHeight": 22,
              },
              undefined,
            ]
          }
        >
          Test description
        </Text>
      </View>
    </View>
  </View>
</TouchableOpacity>
`;

exports[`MenuItem renders with different icon 1`] = `
<TouchableOpacity
  disabled={false}
  onPress={[MockFunction]}
  style={
    {
      "backgroundColor": "#ffffff",
      "borderRadius": 4,
      "opacity": 1,
      "position": "relative",
    }
  }
>
  <View
    accessibilityRole="none"
    accessible={true}
    style={
      {
        "padding": 16,
        "paddingVertical": 8,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "flex": -1,
          }
        }
        testID="listitemcolumn"
      >
        <SvgMock
          fill="currentColor"
          name="Bank"
          style={
            [
              {
                "color": "#131416",
                "height": 20,
                "width": 20,
              },
              undefined,
            ]
          }
        />
      </View>
      <View
        accessible={false}
        style={
          {
            "width": 16,
          }
        }
        testID="listitem-gap"
      />
      <View
        style={
          {
            "flex": 1,
          }
        }
        testID="listitemcolumn"
      >
        <Text
          accessibilityRole="text"
          style={
            [
              {
                "color": "#131416",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "fontWeight": 400,
                "letterSpacing": 0,
                "lineHeight": 24,
              },
              undefined,
            ]
          }
        >
          Test Menu Item
        </Text>
        <Text
          accessibilityRole="text"
          style={
            [
              {
                "color": "#66676a",
                "fontFamily": "Geist-Regular",
                "fontSize": 14,
                "fontWeight": 400,
                "letterSpacing": 0,
                "lineHeight": 22,
              },
              undefined,
            ]
          }
        >
          Test description
        </Text>
      </View>
    </View>
  </View>
</TouchableOpacity>
`;

exports[`MenuItem renders with empty description 1`] = `
<TouchableOpacity
  disabled={false}
  onPress={[MockFunction]}
  style={
    {
      "backgroundColor": "#ffffff",
      "borderRadius": 4,
      "opacity": 1,
      "position": "relative",
    }
  }
>
  <View
    accessibilityRole="none"
    accessible={true}
    style={
      {
        "padding": 16,
        "paddingVertical": 8,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "flex": -1,
          }
        }
        testID="listitemcolumn"
      >
        <SvgMock
          fill="currentColor"
          name="Add"
          style={
            [
              {
                "color": "#131416",
                "height": 20,
                "width": 20,
              },
              undefined,
            ]
          }
        />
      </View>
      <View
        accessible={false}
        style={
          {
            "width": 16,
          }
        }
        testID="listitem-gap"
      />
      <View
        style={
          {
            "flex": 1,
          }
        }
        testID="listitemcolumn"
      >
        <Text
          accessibilityRole="text"
          style={
            [
              {
                "color": "#131416",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "fontWeight": 400,
                "letterSpacing": 0,
                "lineHeight": 24,
              },
              undefined,
            ]
          }
        >
          Test Menu Item
        </Text>
      </View>
    </View>
  </View>
</TouchableOpacity>
`;

exports[`MenuItem renders with title only 1`] = `
<TouchableOpacity
  disabled={false}
  onPress={[MockFunction]}
  style={
    {
      "backgroundColor": "#ffffff",
      "borderRadius": 4,
      "opacity": 1,
      "position": "relative",
    }
  }
>
  <View
    accessibilityRole="none"
    accessible={true}
    style={
      {
        "padding": 16,
        "paddingVertical": 8,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "flex": -1,
          }
        }
        testID="listitemcolumn"
      >
        <SvgMock
          fill="currentColor"
          name="Add"
          style={
            [
              {
                "color": "#131416",
                "height": 20,
                "width": 20,
              },
              undefined,
            ]
          }
        />
      </View>
      <View
        accessible={false}
        style={
          {
            "width": 16,
          }
        }
        testID="listitem-gap"
      />
      <View
        style={
          {
            "flex": 1,
          }
        }
        testID="listitemcolumn"
      >
        <Text
          accessibilityRole="text"
          style={
            [
              {
                "color": "#131416",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "fontWeight": 400,
                "letterSpacing": 0,
                "lineHeight": 24,
              },
              undefined,
            ]
          }
        >
          Test Menu Item
        </Text>
      </View>
    </View>
  </View>
</TouchableOpacity>
`;
